<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rel_building"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            >

            <LinearLayout
                android:id="@+id/lt_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_about_area"
                        android:padding="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_info"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/bg_fragment"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:padding="8dp"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_current"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_build_ip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="1.1.0"
                            android:gravity="right"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/bg_fragment"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_copyright"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="福州高铭科技有限公司"
                            android:gravity="right"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/bg_fragment"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical|right"
                        android:padding="8dp"
                        android:focusable="true"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_check"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_alignParentLeft="true"
                            />

                        <ImageView
                            android:id="@+id/et_build_remote_ip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_next"
                            android:layout_alignParentRight="true"
                            />
                    </RelativeLayout>
                </LinearLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/bg_fragment"
                    />

                <LinearLayout
                    android:id="@+id/line_clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    android:focusable="true"
                    android:clickable="true"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical|right"
                        android:padding="8dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_clear"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_alignParentLeft="true"
                            />

                        <ImageView
                            android:id="@+id/iv_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_next"
                            android:layout_alignParentRight="true"
                            />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>
</LinearLayout>
</ScrollView>